--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script type="text/javascript">
-        let login = atob('c2VyZHRzZWtvbEBnbWFpbC5jb20=');
-        let pass = atob('MjM3OEE0OTk1NDQ4RjBDQ0UyODZFQ0QzMjE3RDk5NDAxMjJC');
-        // let pass = atob('NTlCRTYxQ0Q3OEJERDg5MTVEMzdBQzg2NEUzRTlBRDM0RDE2'); # info
+        // let login = atob('c2VyZHRzZWtvbEBnbWFpbC5jb20=');
+        let login = 'Info@litrans.lt';
+        // let pass = atob('MjM3OEE0OTk1NDQ4RjBDQ0UyODZFQ0QzMjE3RDk5NDAxMjJC');
+        let pass = atob('NTlCRTYxQ0Q3OEJERDg5MTVEMzdBQzg2NEUzRTlBRDM0RDE2');
         let from = 'Info@litrans.lt';
         let to = "Info@litrans.lt";
 
