--- a/index.html
+++ b/index.html
@@ -1148,10 +1148,10 @@
                         <h2>CLIENTS</h2>
                         <!--                        <div class="subtitle with-square">ALIQUAM MALESUADA</div>-->
                     </div>
-                    <p>
-                        Praesent vestibulum dapibus nibh. Etiam iaculis nunc ac metus. Ut nisl quis enim dignissim sagittis.
-                        Etiam sollicitudin, ipsum eu pulvinar rutrum, tellus ipsum laoreet sapien, quis venenatis ante odio.
-                    </p>
+<!--                    <p>-->
+<!--                        Praesent vestibulum dapibus nibh. Etiam iaculis nunc ac metus. Ut nisl quis enim dignissim sagittis.-->
+<!--                        Etiam sollicitudin, ipsum eu pulvinar rutrum, tellus ipsum laoreet sapien, quis venenatis ante odio.-->
+<!--                    </p>-->
 
                     <!-- === OWL CAROUSEL === -->
                     <div class="home-clients-carousel owl-carousel owl-theme" id="owl-clients">
@@ -1163,14 +1163,14 @@
                             <div class="home-clients-carousel-item">
                                 <a href="#"><img src="images/clients/1.png" alt></a>
                             </div>
-                            <!-- === client item === -->
-                            <div class="home-clients-carousel-item ">
-                                <a href="#"><img src="images/clients/2.png" alt></a>
-                            </div>
-                            <!-- === client item === -->
-                            <div class="home-clients-carousel-item">
-                                <a href="#"><img src="images/clients/3.png" alt></a>
-                            </div>
+<!--                            &lt;!&ndash; === client item === &ndash;&gt;-->
+<!--                            <div class="home-clients-carousel-item ">-->
+<!--                                <a href="#"><img src="images/clients/2.png" alt></a>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; === client item === &ndash;&gt;-->
+<!--                            <div class="home-clients-carousel-item">-->
+<!--                                <a href="#"><img src="images/clients/3.png" alt></a>-->
+<!--                            </div>-->
                             <!-- === client item === -->
                             <div class="home-clients-carousel-item">
                                 <a href="#"><img src="images/clients/4.jpg" alt></a>
@@ -1181,8 +1181,13 @@
                             </div>
                             <!-- === client item === -->
                             <div class="home-clients-carousel-item">
+<!--                                <a href="#"><img src="images/clients/4.jpg" alt></a>-->
+                            </div>
+                            <!-- === client item === -->
+                            <div class="home-clients-carousel-item">
                                 <a href="#"><img src="images/clients/6.jpg" alt></a>
                             </div>
+
                             <div class="home-clients-carousel-hline"></div>
                             <div class="home-clients-carousel-vline1"></div>
                             <div class="home-clients-carousel-vline2"></div>
@@ -1385,7 +1390,7 @@
          -->
             <!-- === FOOTER COLUMN === -->
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 footer-3">
-                <h4 class="with-square with-border-bottom">ADRESS</h4>
+                <h4 class="with-square with-border-bottom text-uppercase">adress</h4>
                 <div class="footer-3-phone footer-3-item">
                     <span class="footer-3-icon"><i class="fa fa-phone"></i></span>
                     Telephone: +380 50 371 5800
@@ -1400,7 +1405,10 @@
                 </div>
                 <div class="footer-3-adress footer-3-item">
                     <span class="footer-3-icon"><i class="fa fa-map-marker"></i></span>
-                    Adress: UAB Litrans Kodas: 305457073 Žemuogių 3-2, Bajorų k., Vilniaus raj., Lietuva
+                    Company details:<br>
+                    UAB Litrans<br>
+                    Kodas: 305457073<br>
+                    adress: Žemuogių 3-2, Bajorų k., Vilniaus raj., Lietuva
                 </div>
             </div>
             <!--
